--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "angular-cli-ghpages": "^0.6.0",
     "hammerjs": "^2.0.8",
     "ng2-nouislider": "^1.8.2",
     "nouislider": "^14.0.2",
