--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "angular-cli-ghpages": "^0.6.0",
+    "angular-cli-ghpages": "^0.6.2",
     "hammerjs": "^2.0.8",
-    "ng2-nouislider": "^1.8.2",
+    "ng2-nouislider": "^1.8.3",
     "nouislider": "^14.6.2",
     "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
@@ -40,7 +40,7 @@
     "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~6.3.14",
+    "karma": "^6.3.19",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
