--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.0",
-    "@angular/cdk": "^8.2.3",
-    "@angular/common": "~10.2.0",
-    "@angular/compiler": "~10.2.0",
-    "@angular/core": "~11.0.5",
-    "@angular/forms": "~10.2.0",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~10.2.0",
-    "@angular/platform-browser-dynamic": "~10.2.0",
-    "@angular/router": "~10.2.0",
+    "@angular/animations": "~15.2.5",
+    "@angular/cdk": "~15.2.5",
+    "@angular/common": "~15.2.5",
+    "@angular/compiler": "~15.2.5",
+    "@angular/core": "~15.2.5",
+    "@angular/forms": "~15.2.5",
+    "@angular/material": "~15.2.5",
+    "@angular/platform-browser": "~15.2.5",
+    "@angular/platform-browser-dynamic": "~15.2.5",
+    "@angular/router": "~15.2.5",
     "angular-cli-ghpages": "^0.6.2",
     "hammerjs": "^2.0.8",
     "ng2-nouislider": "^1.8.3",
     "nouislider": "^14.6.2",
     "rxjs": "~6.6.3",
     "tslib": "^1.14.1",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.5",
     "@angular/cli": "~15.2.5",
-    "@angular/compiler-cli": "~10.2.0",
-    "@angular/language-service": "~10.2.0",
+    "@angular/compiler-cli": "~15.2.5",
+    "@angular/language-service": "~15.2.5",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.2",
-    "jasmine-core": "~3.4.0",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^6.3.19",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "protractor": "^5.4.4",
+    "protractor": "^7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.8.2"
   }
 }
