--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,14 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "development": {
+            "buildOptimizer": false,
+            "optimization": false,
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "sourceMap": true,
+            "namedChunks": true
             }
           }
         },
@@ -62,6 +70,9 @@
             "browserTarget": "piutool-app:build"
           },
           "configurations": {
+            "development": {
+              "browserTarget": "piutool-app:build:development"
+            },
             "production": {
               "browserTarget": "piutool-app:build:production"
             }
